add complexified version of mastermind

--- a/your-project/Mastermind.ipynb
+++ b/your-project/Mastermind.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,11 +32,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "max_rounds=3"
+    "max_rounds=6"
    ]
   },
   {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,13 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "hide = random.sample(colors,k=4)"
+    "hide = random.choices(colors,k=4)"
    ]
   },
   {
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,8 +93,8 @@
     "\n",
     "    while len(player_combination)<4:\n",
     "        a = 0\n",
-    "        while a not in colors or a in player_combination:\n",
-    "            a=input('Choose a color in the list:')            \n",
+    "        while a not in colors:\n",
+    "            a=input('Choose a color in the list: ')            \n",
     "        player_combination.append(a)\n",
     "\n",
     "    print('your combination is ', player_combination)\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,11 @@
     "            challenger_advise.append('white')\n",
     "        else:\n",
     "            challenger_advise.append(\" \")\n",
-    "\n",
+    "    \n",
+    "    if challenger_advise.count('red')>2 and 'white' in challenger_advise:\n",
+    "        challenger_advise.insert(challenger_advise.index('white'),\" \")\n",
+    "        challenger_advise.remove('white')\n",
+    "            \n",
     "    print(challenger_advise)\n",
     "    return challenger_advise"
    ]
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,53 +166,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a color in the list:orange\n",
-      "Choose a color in the list:green\n",
-      "Choose a color in the list:purple\n",
-      "Choose a color in the list:black\n",
-      "your combination is  ['orange', 'green', 'purple', 'black']\n",
-      "[' ', ' ', 'white', ' ']\n",
-      "Choose a color in the list:purple\n",
-      "Choose a color in the list:blue\n",
-      "Choose a color in the list:red\n",
-      "Choose a color in the list:yellow\n",
-      "your combination is  ['purple', 'blue', 'red', 'yellow']\n",
-      "['white', 'white', ' ', 'white']\n",
-      "Choose a color in the list:blue\n",
-      "Choose a color in the list:purple\n",
-      "Choose a color in the list:yellow\n",
-      "Choose a color in the list:grey\n",
-      "your combination is  ['blue', 'purple', 'yellow', 'grey']\n",
-      "['red', 'white', 'red', 'white']\n",
-      "Sorry, you lose\n"
+      "Choose a color in the list: orange\n",
+      "Choose a color in the list: purple\n",
+      "Choose a color in the list: purple\n",
+      "Choose a color in the list: red\n",
+      "your combination is  ['orange', 'purple', 'purple', 'red']\n",
+      "['red', 'red', 'white', 'white']\n",
+      "Choose a color in the list: orange\n",
+      "Choose a color in the list: purple\n",
+      "Choose a color in the list: red\n",
+      "Choose a color in the list: \n",
+      "Choose a color in the list: purple\n",
+      "your combination is  ['orange', 'purple', 'red', 'purple']\n",
+      "['red', 'red', 'red', 'red']\n",
+      "Congratulations, you won !\n"
      ]
     }
    ],
    "source": [
     "player_won = 0\n",
     "n_round = 0\n",
+    "hide = random.choices(colors,k=4)\n",
     "\n",
     "while player_won == 0 and n_round<max_rounds:\n",
     "    player_won = round_result(challenger(player(),hide))\n",
     "    n_round +=1\n",
     "    \n",
     "if n_round == max_rounds and player_won == 0:\n",
-    "    print('Sorry, you lose')\n"
+    "    print('Sorry, you lose')\n",
+    "    print('The hidden combination was', hide)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
