update last version of Mastermind and README file

--- a/your-project/Mastermind.ipynb
+++ b/your-project/Mastermind.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,32 +161,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Game execution**"
+    "### Game execution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**List of colors:**\n",
+    "<font color = blue>blue</font>, <font color = red>red</font>, <font color = green>green</font>,\n",
+    "<font color = purple>purple</font>, <font color = yellow>yellow</font>, <font color = black>black</font>, <font color = orange>orange</font>, <font color = grey>grey</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Choose a color in the list: orange\n",
-      "Choose a color in the list: purple\n",
-      "Choose a color in the list: purple\n",
+      "Choose a color in the list: blue\n",
       "Choose a color in the list: red\n",
-      "your combination is  ['orange', 'purple', 'purple', 'red']\n",
-      "['red', 'red', 'white', 'white']\n",
-      "Choose a color in the list: orange\n",
-      "Choose a color in the list: purple\n",
+      "Choose a color in the list: green\n",
+      "Choose a color in the list: kusgdvqlh\n",
+      "Choose a color in the list: kjbvcsd\n",
+      "Choose a color in the list: black\n",
+      "your combination is  ['blue', 'red', 'green', 'black']\n",
+      "[' ', 'white', 'red', ' ']\n",
       "Choose a color in the list: red\n",
-      "Choose a color in the list: \n",
+      "Choose a color in the list: orange\n",
+      "Choose a color in the list: green\n",
+      "Choose a color in the list: grey\n",
+      "your combination is  ['red', 'orange', 'green', 'grey']\n",
+      "['white', ' ', 'red', ' ']\n",
+      "Choose a color in the list: yellow\n",
       "Choose a color in the list: purple\n",
-      "your combination is  ['orange', 'purple', 'red', 'purple']\n",
-      "['red', 'red', 'red', 'red']\n",
-      "Congratulations, you won !\n"
+      "Choose a color in the list: green\n",
+      "Choose a color in the list: red\n",
+      "your combination is  ['yellow', 'purple', 'green', 'red']\n",
+      "[' ', 'red', 'red', 'red']\n"
      ]
     }
    ],
@@ -203,6 +218,13 @@
     "    print('Sorry, you lose')\n",
     "    print('The hidden combination was', hide)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
